# reverse-k-ranks

./: .gitignore  CMakeLists.txt  ReadMe.md  TODO.txt  build-debug.py  build-performance.py  build-project.sh  gen_fake_data.py  install-readme  iterative_test.py  readme  remove_term.py  run_dbg_disk.py  run_dbg_disk_update.py  run_dbg_other.py  run_dbg_other_03.py  run_dbg_other_05.py  run_dbg_other_08.py  run_dbg_other_10.py  run_dbg_other_disk.py  run_rkr.py  run_rkr_update.py  run_rtk.py  t1_test.py  test.cpp  trans_file.py  vecs_io.py
attribution/GridBoundCompare/: DataTypeCompare.cpp  GridBoundCompare.cpp  RunGridIndex.hpp  RunGridIndexDouble.hpp
attribution/RMIPS-unstable-result/: AttributionFileIO.hpp  ReverseMIPS.cpp  ReverseMIPS.hpp
attribution/performance-metric-relationship/: refinement_comparison.py  refinement_vs_running_time.py
attribution/sample-score-distribution/: inverse_normal_cdf.py  print_all_pdf.py  print_sample_cdf.py
attribution/score-rank-distribution/: UserScoreDistribution.cpp  fit_normal.py  fit_score_rank_curve.py  fit_weibull.py  score_rank_distribution.py
dataset/fake-normal-30d/: fake-normal-30d_data_item.fvecs  fake-normal-30d_query_item.fvecs  fake-normal-30d_user.fvecs
dataset/fake-normal-30d-update-item/: fake-normal-30d-update-item_data_item.fvecs  fake-normal-30d-update-item_data_item_update.fvecs  fake-normal-30d-update-item_query_item.fvecs  fake-normal-30d-update-item_user.fvecs
dataset/fake-normal-30d-update-user/: fake-normal-30d-update-user_data_item.fvecs  fake-normal-30d-update-user_query_item.fvecs  fake-normal-30d-update-user_user.fvecs  fake-normal-30d-update-user_user_update.fvecs
motivation/dimensionality_curse/: enmf.test  example.yaml  hyertuning.py  plot.py  run.py
motivation/problem_definition/: gen_sample_query.py  k_ranks_curve.py  max-rank.py  popular_item_movielens.py
motivation/rank_bucket/: select_n_merge_user.py
motivation/rating/: rating_distribution_hist.py  user_n_rating_hist.py
motivation/reverse-k-score/: 1_matrix_factorization_split.py  2_convert_data.py  3_run_rkr.py  4_groundtruth.py  convert_data.py  groundtruth.py  run.py  vecs_io.py
obsoluted/: BatchBinarySearchCacheBound.cpp  BatchBinarySearchCacheBound.hpp  BinarySearchCacheBound.hpp  CMakeLists_fetchcontent.txt  IntervalVector.cpp  IntervalVector.hpp  ItemListInterval.cpp  ItemListInterval.hpp  KMeans.hpp  OnlineBruteForce.hpp  QSComputeAllIPBound.hpp  QSMinusHeuristic.hpp  RankSearchNoEarlyTermination.hpp  ReverseRankIndexVariance.cpp  svd.py
obsoluted/BPlusTree/: BPlusTree.hpp
obsoluted/BatchRun/: BatchBuildIndexMergeRankByInterval.hpp  BatchBuildIndexRSTopTIP.hpp  BatchMeasureRetrievalMergeRankByInterval.hpp  BatchMeasureRetrievalTopTIP.hpp  BatchRetrievalMergeRankByInterval.hpp  BatchRetrievalTopT.hpp  BatchRunMergeRankByInterval.cpp  BatchRunRSTopTIP.cpp  RankSampleMeasurePruneRatio.hpp  ScoreSampleMeasurePruneRatio.hpp
obsoluted/BatchRunQuadraticRankBoundByBitmap/: BatchBuildIndexQuadraticRankBoundByBitmap.hpp  BatchMeasureRetrievalQuadraticRankBoundByBitmap.hpp  BatchRetrievalQuadraticRankBoundByBitmap.hpp  BatchRunQuadraticRankBoundByBitmap.cpp  MeasureQuadraticRankBoundByBitmap.hpp
obsoluted/ComputeAllGPUIPBound/: ComputeAllGPUIPBound.hpp  QSComputeAllGPUIPBound.hpp  RefineGPUIPBound.hpp
obsoluted/ComputeLEMP/: ComputeLEMP.hpp
obsoluted/ComputeLEMPParallizeWithin/: ComputeLEMP.hpp
obsoluted/ComputeResultByIndexAndIPBound/: IntervalSearchBoundSelection.cpp
obsoluted/DiskIndexCompress/: CompressTopTIDIPBruteForce.hpp  IntervalRankBoundCompress.cpp  IntervalRankBoundCompress.hpp  MergeIntervalIDByBitmap.hpp  MergeIntervalIDByInterval.hpp  RankBucket.hpp  SSMergeIntervalIDByBitmap.hpp  SSMergeIntervalIDByInterval.hpp  ScoreSampleGetIntervalID.hpp  TopTIDIP.hpp
obsoluted/GlobalLinearRegression/: BuildIntLRByComputation.cpp  GlobalLinearRegression.hpp  QueryRankSampleGlobalIntLR.hpp
obsoluted/HashBound/: HashBound.hpp  HashSearch.hpp
obsoluted/LeastSquareLinearRegression/: LeastSquareLinearRegression.hpp  QueryRankSampleLeastSquareIntLR.hpp
obsoluted/LinearProgrammingRegressionIndex/: MinMaxLinearRegression.hpp  QSRPLinearProgramming.hpp  QSRPNoDTLinearProgramming.hpp  UniformLinearRegression.hpp
obsoluted/OptimizationInRegressionIndex/: QSRPNormal.hpp  QSRPNormalOptHeuristic.hpp  QSRPUniform.hpp  QSRPUniformCandidateNormal.hpp  QSRPUniformCandidateUniform.hpp
obsoluted/PGMIndex/: LinearModel.hpp
obsoluted/QSReadAll/: QSReadAll.hpp
obsoluted/QSSearchBruteForce/: QSSearchBruteForce.hpp
obsoluted/QuadraticBound/: QuadraticRankBound.hpp  QuadraticRankSearch.hpp  QuadraticScoreBound.hpp  QuadraticScoreSearch.hpp
obsoluted/QueryAssignFrequent/: QueryAssignFrequent.hpp  SSQueryAssignFrequent.hpp
obsoluted/QueryRankSampleComputeAllGPU/: ComputeAllGPU.hpp  QueryRankSampleComputeAllGPU.hpp  RefineGPU.hpp
obsoluted/QueryRankSampleDirectIntLR/: DirectLinearRegression.hpp  QueryRankSampleDirectIntLR.hpp
obsoluted/QueryRankSampleScoreDistribution/: QRSScoreDistribution.hpp  QueryRankSampleScoreDistribution.hpp
obsoluted/RankSampleIPBound/: ApproximateByGrid.hpp  ApproximateByNorm.hpp  ApproximateByUser.hpp  RankSampleApprByGridIPBound.hpp  RankSampleApprByNormIPBound.hpp  RankSampleApprByUserIPBound.hpp  RankSampleIntIPBound.hpp
obsoluted/RankSampleStoreID/: RankSampleStoreID.hpp  ReadAllID.hpp
obsoluted/SampleSearch/: QueryRankSearchScoreDistribution.hpp  QueryRankSearchSearchAllRank.hpp
obsoluted/ScoreSample/: CompressTopTIPBruteForce.hpp  SSComputeAll.hpp  SSMergeRankByInterval.hpp  ScoreSample.hpp  ScoreSearch.hpp
obsoluted/ScoreSearchTopT/: ScoreSearchTopT.hpp
obsoluted/TopT/: QRSTopTIP.hpp  RSTopTIP.hpp  TopTIP.hpp
obsoluted/TopTID/: CompressTopTIDBruteForce.hpp  TopTID.hpp
obsoluted/Xtree/: CMakeLists.txt
obsoluted/alglib/: NormalLinearRegressionALGLIB.hpp  QSRPNormalALGLIB.hpp
script/: amazon_query_log.py  io_cost_average.py  match_express.py  normalization.py  rmips_bias.py  send_email.py  svd.py  vecs_io.py  verify_epsilon.py
test/: CMakeLists.txt  KMeans.cpp  SVD.cpp
(+1031 files in other folders)
